k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinny-k8s-app
  labels:
    app: cinny-k8s-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cinny-k8s-app
  template:
    metadata:
      labels:
        app: cinny-k8s-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
