k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinny-k8s-app
  labels:
    app: cinny-k8s-app
spec:
  type: NodePort
  selector:
    app: cinny-k8s-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30088
