k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinny-k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cinny.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cinny-k8s-app
            port:
              number: 80
